-
Bug
-
Resolution: Fixed
-
Minor
-
Lustre 2.15.0
-
3
-
9223372036854775807
Saw a lockdep warning in Gerrit Janitor client console logs when running runtests:
http://testing.linuxhacker.ru:3333/lustre-reports/22787/results.html
http://testing.linuxhacker.ru:3333/lustre-reports/22787/testresults/runtests-rhel8-zfs-rhel8.5_x86_64-rhel8.5_x86_64/
http://testing.linuxhacker.ru:3333/lustre-reports/22787/testresults/runtests-rhel8-zfs-rhel8.5_x86_64-rhel8.5_x86_64/oleg240-client-console.txt
[ 272.868594] do not call blocking ops when !TASK_RUNNING; state=1 set at [<000000007e590e9d>] prepare_to_wait_event+0xc9/0x2a0 [ 272.870611] WARNING: CPU: 1 PID: 4916 at kernel/sched/core.c:6733 __might_sleep+0xa3/0xc0 [ 272.877791] CPU: 1 PID: 4916 Comm: mount.lustre Kdump: loaded Tainted: G O --------- - - 4.18.0rh8.5-debug #2 [ 272.879551] Hardware name: Bochs Bochs, BIOS Bochs 01/01/2011 [ 272.880475] RIP: 0010:__might_sleep+0xa3/0xc0 272.894276] Call Trace: [ 272.894639] slab_pre_alloc_hook.constprop.45+0x12d/0x1f0 [ 272.895479] __kmalloc+0x8b/0x3d0 [ 272.897379] null_alloc_repbuf+0x172/0x340 [ptlrpc] [ 272.898261] sptlrpc_cli_alloc_repbuf+0x1fe/0x290 [ptlrpc] [ 272.899160] ptl_send_rpc+0x131b/0x1a10 [ptlrpc] [ 272.902503] ptlrpc_check_set+0x279f/0x2f80 [ptlrpc] [ 272.903480] ptlrpc_set_wait+0x6ef/0xae0 [ptlrpc] [ 272.905053] ptlrpc_queue_wait+0xb4/0x2e0 [ptlrpc] [ 272.905939] ldlm_cli_enqueue+0x633/0xda0 [ptlrpc] [ 272.908533] mgc_enqueue.isra.10.constprop.18+0x2ab/0x470 [mgc] [ 272.911159] mgc_process_log+0x123/0xb60 [mgc] [ 272.913066] do_config_log_add+0x5dd/0x720 [mgc] [ 272.913717] config_log_find_or_add+0xbc/0x100 [mgc] [ 272.915555] config_log_add+0x535/0xc90 [mgc] [ 272.916238] mgc_process_config+0xb74/0x1490 [mgc] [ 272.916997] lustre_process_log+0x7d4/0xda0 [obdclass] [ 272.920469] ll_fill_super+0x906/0x14a0 [lustre] [ 272.922096] lustre_fill_super+0xe8/0x560 [lustre] [ 272.923625] mount_nodev+0x58/0x100 [ 272.924201] lustre_mount+0x1c/0x30 [lustre] [ 272.924893] legacy_get_tree+0x38/0x90 [ 272.925506] vfs_get_tree+0x30/0x140 [ 272.926118] do_mount+0xcad/0x10b0 [ 272.926658] ksys_mount+0x11d/0x150 [ 272.927271] __x64_sys_mount+0x29/0x40 [ 272.927871] do_syscall_64+0xd4/0x5a0 [ 272.928493] entry_SYSCALL_64_after_hwframe+0x6a/0xdf [ 272.943745] irq event stamp: 44536 [ 272.944345] hardirqs last enabled at (44535): [<ffffffff81250ce4>] ktime_get_real_ts64+0x224/0x2e0 [ 272.946562] hardirqs last disabled at (44536): [<ffffffff820e4df2>] __schedule+0x8b2/0xe50 [ 272.949759] softirqs last enabled at (40638): [<ffffffff81d4a7ae>] sk_common_release+0x8e/0x190 [ 272.952854] softirqs last disabled at (40636): [<ffffffff81d4a77a>] sk_common_release+0x5a/0x190
- is related to
-
LU-16807 Resolve newer debug kernel warnings
-
- Resolved
-