LU-15808 ptlrpc: wait condition should not sleep

ptlrpc_set_wait using a potentially long running condition
ptlrpc_check_set() that can also block.

If it does block during ptl_send_rpc() it could potentially
trigger a warning:
   do not call blocking ops when !TASK_RUNNING

Instead provide a no sleep variant of ptlrpc_check_set that
adds the problematic requests to a list for the caller to
dispatch.

Cherry-picked-from: 3fd169ef609c79dcc598604f34e8ff292bd8ca59
Cherry-picked-from-change: https://review.whamcloud.com/55586/4

Signed-off-by: Shaun Tancheff <shaun.tancheff@hpe.com>
Change-Id: I1cb90dad388f365e10fc53add47b736da9633fcf